--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -98,7 +98,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/BActulizarNum"
-                        android:id="@+id/btnActualizar"/>
+                        android:id="@+id/btnActualizar"
+                        />
 
                 </LinearLayout>
 
