--- a/app/src/main/res/layout/card_lista.xml
+++ b/app/src/main/res/layout/card_lista.xml
@@ -11,6 +11,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:paddingTop="30dp">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ruta"
+            android:id="@+id/imgRuts" />
+
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
@@ -41,9 +55,8 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ruta"
-            android:id="@+id/imgRuts"/>
+            android:layout_height="40dp"/>
+
 
         <LinearLayout
             android:layout_width="match_parent"
