--- a/app/src/main/res/values/Horarios.xml
+++ b/app/src/main/res/values/Horarios.xml
@@ -17,6 +17,8 @@
         <item>18</item>
         <item>19</item>
         <item>20</item>
+        <item>21</item>
+        <item>22</item>
     </string-array>
 
 
