--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetalleRuta"
+    tools:context=".MapsActivity"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -19,6 +19,7 @@
             android:layout_marginLeft="20dp"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:src="@drawable/user"
             android:id="@+id/foroDetalle"
             android:layout_marginRight="20dp"
             app:civ_border_width="2dp"
