--- a/app/src/main/res/layout/card_lista.xml
+++ b/app/src/main/res/layout/card_lista.xml
@@ -38,6 +38,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:id="@+id/ivFotol"
+                android:src="@drawable/user"
                 app:civ_border_width="2dp"
                 app:civ_border_color="@color/colorPrimaryDark"/>
 
