--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -13,17 +13,38 @@
         android:layout_height="wrap_content"
         android:background="@drawable/detallebar">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/user"
-            android:id="@+id/foroDetalle"
-            android:layout_marginRight="20dp"
-            app:civ_border_width="2dp"
-            app:civ_border_color="@color/colorPrimaryDark"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/user"
+                android:id="@+id/foroDetalle"
+                android:layout_marginRight="20dp"
+                app:civ_border_width="2dp"
+                app:civ_border_color="@color/colorPrimaryDark"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Modificar"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:textColor="@color/blanco"
+                android:layout_marginTop="5dp"
+                android:visibility="gone"
+                style="@style/Widget.AppCompat.Light.ActionButton"
+                android:id="@+id/btnModificar"/>
+        </LinearLayout>
+
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
